// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Operation Object examples > deprecated operation > does not include @deprecated for non-deprecated operations 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';

function decorateWithErrors<T, E>(
  item: T,
  runtimeErrors: unknown,
): T & { __definedErrors: E } {
  Object.defineProperty(item, "__definedErrors", {
    value: runtimeErrors,
    enumerable: false,
    configurable: true,
    writable: false,
  });
  return item as T & { __definedErrors: E };
}

export function isDefinedError<E extends ApiError<number, unknown>>(
  err: unknown,
  fn: { __definedErrors: E },
): err is E {
  if (err instanceof UnspecifiedApiError) return false;
  if (!(err instanceof ApiError)) return false;
  return true;
}

/**
 * Performs an HTTP request and returns the response.
 *
 * When \`expectStream\` is true, the implementation should return
 * a \`StreamResponse\` containing the stream data, filename (from
 * Content-Disposition header), and response headers.
 */
export type Requester = <TResponse>(
  method: string,
  path: string,
  options: {
    query?: Record<string, unknown>;
    body?: unknown;
    headers?: Record<string, string>;
    expectStream?: true;
  },
) => Promise<TResponse | StreamResponse | ErrorResponse>;


export function createClient(requester: Requester) {
  return {
    /**
     * Current endpoint
     */
    getCurrent: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/current\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Operation Object examples > deprecated operation > includes @deprecated JSDoc tag for deprecated operations 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';

function decorateWithErrors<T, E>(
  item: T,
  runtimeErrors: unknown,
): T & { __definedErrors: E } {
  Object.defineProperty(item, "__definedErrors", {
    value: runtimeErrors,
    enumerable: false,
    configurable: true,
    writable: false,
  });
  return item as T & { __definedErrors: E };
}

export function isDefinedError<E extends ApiError<number, unknown>>(
  err: unknown,
  fn: { __definedErrors: E },
): err is E {
  if (err instanceof UnspecifiedApiError) return false;
  if (!(err instanceof ApiError)) return false;
  return true;
}

/**
 * Performs an HTTP request and returns the response.
 *
 * When \`expectStream\` is true, the implementation should return
 * a \`StreamResponse\` containing the stream data, filename (from
 * Content-Disposition header), and response headers.
 */
export type Requester = <TResponse>(
  method: string,
  path: string,
  options: {
    query?: Record<string, unknown>;
    body?: unknown;
    headers?: Record<string, string>;
    expectStream?: true;
  },
) => Promise<TResponse | StreamResponse | ErrorResponse>;


export function createClient(requester: Requester) {
  return {
    /**
     * Legacy endpoint
     *
     * @deprecated
     */
    getLegacy: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/legacy\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Operation Object examples > operationId usage > falls back to path-based when operationId-with-fallback and no operationId 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';

function decorateWithErrors<T, E>(
  item: T,
  runtimeErrors: unknown,
): T & { __definedErrors: E } {
  Object.defineProperty(item, "__definedErrors", {
    value: runtimeErrors,
    enumerable: false,
    configurable: true,
    writable: false,
  });
  return item as T & { __definedErrors: E };
}

export function isDefinedError<E extends ApiError<number, unknown>>(
  err: unknown,
  fn: { __definedErrors: E },
): err is E {
  if (err instanceof UnspecifiedApiError) return false;
  if (!(err instanceof ApiError)) return false;
  return true;
}

/**
 * Performs an HTTP request and returns the response.
 *
 * When \`expectStream\` is true, the implementation should return
 * a \`StreamResponse\` containing the stream data, filename (from
 * Content-Disposition header), and response headers.
 */
export type Requester = <TResponse>(
  method: string,
  path: string,
  options: {
    query?: Record<string, unknown>;
    body?: unknown;
    headers?: Record<string, string>;
    expectStream?: true;
  },
) => Promise<TResponse | StreamResponse | ErrorResponse>;


export function createClient(requester: Requester) {
  return {
    getUsers: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/users\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Operation Object examples > operationId usage > prefers operationId with operationId-with-fallback strategy when available 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';

function decorateWithErrors<T, E>(
  item: T,
  runtimeErrors: unknown,
): T & { __definedErrors: E } {
  Object.defineProperty(item, "__definedErrors", {
    value: runtimeErrors,
    enumerable: false,
    configurable: true,
    writable: false,
  });
  return item as T & { __definedErrors: E };
}

export function isDefinedError<E extends ApiError<number, unknown>>(
  err: unknown,
  fn: { __definedErrors: E },
): err is E {
  if (err instanceof UnspecifiedApiError) return false;
  if (!(err instanceof ApiError)) return false;
  return true;
}

/**
 * Performs an HTTP request and returns the response.
 *
 * When \`expectStream\` is true, the implementation should return
 * a \`StreamResponse\` containing the stream data, filename (from
 * Content-Disposition header), and response headers.
 */
export type Requester = <TResponse>(
  method: string,
  path: string,
  options: {
    query?: Record<string, unknown>;
    body?: unknown;
    headers?: Record<string, string>;
    expectStream?: true;
  },
) => Promise<TResponse | StreamResponse | ErrorResponse>;


export function createClient(requester: Requester) {
  return {
    listUsers: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/users\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Operation Object examples > operationId usage > uses operationId as method name with operationId strategy 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';

function decorateWithErrors<T, E>(
  item: T,
  runtimeErrors: unknown,
): T & { __definedErrors: E } {
  Object.defineProperty(item, "__definedErrors", {
    value: runtimeErrors,
    enumerable: false,
    configurable: true,
    writable: false,
  });
  return item as T & { __definedErrors: E };
}

export function isDefinedError<E extends ApiError<number, unknown>>(
  err: unknown,
  fn: { __definedErrors: E },
): err is E {
  if (err instanceof UnspecifiedApiError) return false;
  if (!(err instanceof ApiError)) return false;
  return true;
}

/**
 * Performs an HTTP request and returns the response.
 *
 * When \`expectStream\` is true, the implementation should return
 * a \`StreamResponse\` containing the stream data, filename (from
 * Content-Disposition header), and response headers.
 */
export type Requester = <TResponse>(
  method: string,
  path: string,
  options: {
    query?: Record<string, unknown>;
    body?: unknown;
    headers?: Record<string, string>;
    expectStream?: true;
  },
) => Promise<TResponse | StreamResponse | ErrorResponse>;


export function createClient(requester: Requester) {
  return {
    listUsers: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/users\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Operation Object examples > operationId usage > uses path-based name by default and ignores operationId 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';

function decorateWithErrors<T, E>(
  item: T,
  runtimeErrors: unknown,
): T & { __definedErrors: E } {
  Object.defineProperty(item, "__definedErrors", {
    value: runtimeErrors,
    enumerable: false,
    configurable: true,
    writable: false,
  });
  return item as T & { __definedErrors: E };
}

export function isDefinedError<E extends ApiError<number, unknown>>(
  err: unknown,
  fn: { __definedErrors: E },
): err is E {
  if (err instanceof UnspecifiedApiError) return false;
  if (!(err instanceof ApiError)) return false;
  return true;
}

/**
 * Performs an HTTP request and returns the response.
 *
 * When \`expectStream\` is true, the implementation should return
 * a \`StreamResponse\` containing the stream data, filename (from
 * Content-Disposition header), and response headers.
 */
export type Requester = <TResponse>(
  method: string,
  path: string,
  options: {
    query?: Record<string, unknown>;
    body?: unknown;
    headers?: Record<string, string>;
    expectStream?: true;
  },
) => Promise<TResponse | StreamResponse | ErrorResponse>;


export function createClient(requester: Requester) {
  return {
    getUsers: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/users\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Operation Object examples > summary and description > does not duplicate summary when description equals summary 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';

function decorateWithErrors<T, E>(
  item: T,
  runtimeErrors: unknown,
): T & { __definedErrors: E } {
  Object.defineProperty(item, "__definedErrors", {
    value: runtimeErrors,
    enumerable: false,
    configurable: true,
    writable: false,
  });
  return item as T & { __definedErrors: E };
}

export function isDefinedError<E extends ApiError<number, unknown>>(
  err: unknown,
  fn: { __definedErrors: E },
): err is E {
  if (err instanceof UnspecifiedApiError) return false;
  if (!(err instanceof ApiError)) return false;
  return true;
}

/**
 * Performs an HTTP request and returns the response.
 *
 * When \`expectStream\` is true, the implementation should return
 * a \`StreamResponse\` containing the stream data, filename (from
 * Content-Disposition header), and response headers.
 */
export type Requester = <TResponse>(
  method: string,
  path: string,
  options: {
    query?: Record<string, unknown>;
    body?: unknown;
    headers?: Record<string, string>;
    expectStream?: true;
  },
) => Promise<TResponse | StreamResponse | ErrorResponse>;


export function createClient(requester: Requester) {
  return {
    /**
     * Health check
     */
    getPing: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/ping\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Operation Object examples > summary and description > includes both summary and description in JSDoc when both present 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';

function decorateWithErrors<T, E>(
  item: T,
  runtimeErrors: unknown,
): T & { __definedErrors: E } {
  Object.defineProperty(item, "__definedErrors", {
    value: runtimeErrors,
    enumerable: false,
    configurable: true,
    writable: false,
  });
  return item as T & { __definedErrors: E };
}

export function isDefinedError<E extends ApiError<number, unknown>>(
  err: unknown,
  fn: { __definedErrors: E },
): err is E {
  if (err instanceof UnspecifiedApiError) return false;
  if (!(err instanceof ApiError)) return false;
  return true;
}

/**
 * Performs an HTTP request and returns the response.
 *
 * When \`expectStream\` is true, the implementation should return
 * a \`StreamResponse\` containing the stream data, filename (from
 * Content-Disposition header), and response headers.
 */
export type Requester = <TResponse>(
  method: string,
  path: string,
  options: {
    query?: Record<string, unknown>;
    body?: unknown;
    headers?: Record<string, string>;
    expectStream?: true;
  },
) => Promise<TResponse | StreamResponse | ErrorResponse>;


export function createClient(requester: Requester) {
  return {
    /**
     * List all users
     *
     * Returns a paginated list of all registered users in the system.
     */
    getUsers: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/users\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Operation Object examples > summary and description > includes only description in JSDoc when summary is absent 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';

function decorateWithErrors<T, E>(
  item: T,
  runtimeErrors: unknown,
): T & { __definedErrors: E } {
  Object.defineProperty(item, "__definedErrors", {
    value: runtimeErrors,
    enumerable: false,
    configurable: true,
    writable: false,
  });
  return item as T & { __definedErrors: E };
}

export function isDefinedError<E extends ApiError<number, unknown>>(
  err: unknown,
  fn: { __definedErrors: E },
): err is E {
  if (err instanceof UnspecifiedApiError) return false;
  if (!(err instanceof ApiError)) return false;
  return true;
}

/**
 * Performs an HTTP request and returns the response.
 *
 * When \`expectStream\` is true, the implementation should return
 * a \`StreamResponse\` containing the stream data, filename (from
 * Content-Disposition header), and response headers.
 */
export type Requester = <TResponse>(
  method: string,
  path: string,
  options: {
    query?: Record<string, unknown>;
    body?: unknown;
    headers?: Record<string, string>;
    expectStream?: true;
  },
) => Promise<TResponse | StreamResponse | ErrorResponse>;


export function createClient(requester: Requester) {
  return {
    /**
     * Returns all registered users.
     */
    getUsers: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/users\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Operation Object examples > summary and description > includes only summary in JSDoc when description is absent 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';

function decorateWithErrors<T, E>(
  item: T,
  runtimeErrors: unknown,
): T & { __definedErrors: E } {
  Object.defineProperty(item, "__definedErrors", {
    value: runtimeErrors,
    enumerable: false,
    configurable: true,
    writable: false,
  });
  return item as T & { __definedErrors: E };
}

export function isDefinedError<E extends ApiError<number, unknown>>(
  err: unknown,
  fn: { __definedErrors: E },
): err is E {
  if (err instanceof UnspecifiedApiError) return false;
  if (!(err instanceof ApiError)) return false;
  return true;
}

/**
 * Performs an HTTP request and returns the response.
 *
 * When \`expectStream\` is true, the implementation should return
 * a \`StreamResponse\` containing the stream data, filename (from
 * Content-Disposition header), and response headers.
 */
export type Requester = <TResponse>(
  method: string,
  path: string,
  options: {
    query?: Record<string, unknown>;
    body?: unknown;
    headers?: Record<string, string>;
    expectStream?: true;
  },
) => Promise<TResponse | StreamResponse | ErrorResponse>;


export function createClient(requester: Requester) {
  return {
    /**
     * List all users
     */
    getUsers: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/users\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;
